--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "src/**/*",
-    "prisma/**/*"
+    "src/prisma/**/*"
   ],
   "exclude": ["node_modules"]
 }
